docs(docs-layout): fix home link not clickable on tablet

--- a/src/docs/components/docs-topbar/docs-topbar.css
+++ b/src/docs/components/docs-topbar/docs-topbar.css
@@ -51,7 +51,6 @@
 }
 
 .docs-topbar__headline-link {
-  flex-grow: 1;
   text-decoration: none;
 }
 
